--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "wemlion <angusfu1126@qq.com>",
   "license": "MIT",
   "devDependencies": {
-    "pholio": "0.2.0-alpha.1",
+    "pholio": "^0.2.0-alpha.2",
     "postcss-import": "^11.1.0",
     "postcss-preset-env": "^5.3.0"
   }
